# Abilita-informatiche

./: .replit  input.txt  pyproject.toml
src/: main.py  main1.py  main2.py
