[tool.poetry]
name = "repl_python3_Abilita-informatiche"
version = "0.1.0"
description = ""
authors = ["StefanoMarchesi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
linalg = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
